objects/ExpenseOfMember__c.object
<CustomObject>
    <fields>
        <fullName>AmountOfContribution__c</fullName>
        <label>AmountOfContribution</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Email_Id__c</fullName>
        <label>Email_Id</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ExpenseId__c</fullName>
        <label>Expense</label>
        <referenceTo>Expense__c</referenceTo>
        <relationshipLabel>ExpenseOfMembers</relationshipLabel>
        <relationshipName>ExpenseOfMembers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>MemberId__c</fullName>
        <label>Member</label>
        <referenceTo>Member__c</referenceTo>
        <relationshipLabel>ExpenseOfMembers</relationshipLabel>
        <relationshipName>ExpenseOfMembers</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>ExpenseOfMember</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>EOM-{0000}</displayFormat>
        <label>ExpenseOfMember Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ExpenseOfMembers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>